# videomaker

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: settings.py  urls.py
videomaker/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
videomaker/handlers/: __init__.py  constants.py  handler.py
videomaker/migrations/: 0001_initial.py  0002_alter_phrase_text.py
